[refactoring and fixes] Some more refactoring to reduce redundant code and changes to fix leabing dungeons sometimes being stuck * Also move the Dungeon Avatar Trial team handling to the DungeonManager